--- a/KakaoLoginTutorial/KakaoLoginTutorial/Info.plist
+++ b/KakaoLoginTutorial/KakaoLoginTutorial/Info.plist
@@ -22,5 +22,12 @@
 	</array>
 	<key>UIBackgroundModes</key>
 	<array/>
+    <key>LSApplicationQueriesSchemes</key>
+     <array>
+         <!-- 카카오톡으로 로그인 -->
+         <string>kakaokompassauth</string>
+         <!-- 카카오톡 공유 -->
+         <string>kakaolink</string>
+     </array>
 </dict>
 </plist>
